--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -242,7 +242,7 @@
 	{
 		var data = "";
 		data =data + '<div class="checkbox">\
-							<input type="checkbox" id="acadAchievcheck'+acadAchievements_index+'" checked>\
+							<input type="checkbox" id="acadAchievcheck'+acadAchievements_index+'" name="acadAchievcheck'+acadAchievements_index+'" checked>\
 					</div>\
 					<input id="acadAchieve'+acadAchievements_index+'" type="text" name="acadAchieve'+acadAchievements_index+'" onchange="updateResume()">\
 					<br>\
@@ -254,7 +254,7 @@
 	{
 		var data = "";
 		data =data + '<div class="checkbox">\
-							<input type="checkbox" id="workExpEntrycheck'+workExp_index+'" checked>\
+							<input type="checkbox" id="workExpEntrycheck'+workExp_index+'" name="workExpEntrycheck'+workExp_index+'" checked>\
 					</div>\
 					<input id="workexpentry'+workExp_index+'" type="text" name="workexpentry'+workExp_index+'" onchange="updateResume()">\
 					<br>\
@@ -266,7 +266,7 @@
 	{
 		var data = "";
 		data =data + '<div class="checkbox">\
-							<input type="checkbox" id="paperEntryCheck'+paper_index+'" checked>\
+							<input type="checkbox" id="paperEntryCheck'+paper_index+'"  name ="paperEntryCheck'+paper_index+'" checked>\
 					</div>\
 					<input id="paperEntry'+paper_index+'" type="text" name="paperEntry'+paper_index+'" onchange="updateResume()">\
 					<br>\
@@ -278,7 +278,7 @@
 	{
 		var data = "";
 		data =data + '<div class="checkbox">\
-							<input type="checkbox" id="extraentrycheck'+extraC_index+'" checked>\
+							<input type="checkbox" id="extraentrycheck'+extraC_index+'" name="extraentrycheck'+extraC_index+'" checked>\
 					</div>\
 					<input id="extraentry'+extraC_index+'" type="text" name="extraentry'+extraC_index+'" onchange="updateResume()">\
 					<br>\
