--- a/app/views/homepages/home.html.erb
+++ b/app/views/homepages/home.html.erb
@@ -1,4 +1,4 @@
 <% provide(:title,"Homepage") %>
 <h1> Homepage creator </h1>
 
-TODO
+<%= button_to "Create Homepage", homepages_create_path, :method => "get", class: "btn btn-primary" %>
