--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -84,7 +84,7 @@
 		<% end %>
 	</div>
 </div>
-
+<div class="modal"><!-- Place at bottom of page --></div>
 <!--<script src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v1.3.0.js"></script>
 <script src="http://builds.emberjs.com/tags/v1.5.0/ember.js"></script> -->
 
@@ -373,6 +373,41 @@
 		color: #050560;
 	}
 </style>
+
+<style id="coolloader">
+.modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        100;
+    left:       100;
+    height:     50%;
+    width:      50%;
+    background: rgba( 100, 100, 100, 1 ) 
+                url('http://jimpunk.net/Loading/wp-content/uploads/loading1.gif') 
+                20% 20% 
+                no-repeat;
+}
+
+body.loading {
+    overflow: auto;   
+}
+
+body.loading .modal {
+    display: block;
+}
+</style>
+
+<script id="cooljsloading">
+	$body = $("body");
+
+/*	$(document).on({
+	    ajaxStart: function() { $body.addClass("loading");    },
+	     ajaxStop: function() { $body.removeClass("loading"); }    
+	});
+*/
+</script>
+
 
 <script>
 // For verification of name before submission'
