fixed post error

--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -82,7 +82,7 @@
 			<input type="submit" class="btn btn-primary">
 			<input type="hidden" id="htmlpage" name="htmlpage" />
 			<input type="hidden" id="edu_index" name = "edu_index"/>
-			<input type="hidden" id="acadachievements_index" name = "acadachihevements_index"/>
+			<input type="hidden" id="acadachievements_index" name = "acadachievements_index"/>
 			<input type="hidden" id="workexp_index" name = "workexp_index"/>
 			<input type="hidden" id="paper_index" name = "paper_index"/>
 			<input type="hidden" id="extrac_index" name = "extrac_index"/>
