--- a/app/views/resumes/home.html.erb
+++ b/app/views/resumes/home.html.erb
@@ -3,3 +3,5 @@
 <%= button_to 'Create Resume', resumes_createpage_path , :method => "get", class:"btn btn-primary" %> 
 
 <%= button_to 'Existing Resume', resumes_viewlist_path , :method => "get", class:"btn btn-primary" %> 
+
+<%= button_to "Create Template", resumes_createtemplate_path, :method => "get", class: "btn btn-primary" %>
