css bug fix in createresume

--- a/app/views/homepages/create.html.erb
+++ b/app/views/homepages/create.html.erb
@@ -335,7 +335,7 @@
 .page{
 	/*padding : 10pt;*/
 	width : 70%;
-	height : 1000px;
+	/*height : 1000px;*/
 	/*margin: 10pt;*/
 	border: solid black 1pt;
 	/*background-color: #F4F9FB;*/
