--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -214,6 +214,7 @@
 		document.getElementById("resume").innerHTML = data;
 
 		$("#htmlpage").val(data)
+		MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
 		
 	}
 	function getData(field)
